# ras_muafiyet

./: CMakeLists.txt  README.md
include/: fox_animated.h  fox_logo.h  raudio.h  raygui.h  raylib.h  raymath.h  rlgl.h  style_amber.h
src/: main.c
